{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 22,
  "lineage": "afc8da2f-09e0-cdf7-6c0a-d2bd03915d63",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:263535801242:internet-gateway/igw-0d8d489aff3ae74cc",
            "id": "igw-0d8d489aff3ae74cc",
            "owner_id": "263535801242",
            "tags": {
              "Name": "pjt_sydney_igw"
            },
            "tags_all": {
              "Name": "pjt_sydney_igw"
            },
            "vpc_id": "vpc-0183f88cf99f32719"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_pri_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:263535801242:route-table/rtb-0778e126d0b3b3efb",
            "id": "rtb-0778e126d0b3b3efb",
            "owner_id": "263535801242",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pjt_sydney_pri_rt"
            },
            "tags_all": {
              "Name": "pjt_sydney_pri_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0183f88cf99f32719"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:263535801242:route-table/rtb-009b3573e48b87934",
            "id": "rtb-009b3573e48b87934",
            "owner_id": "263535801242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8d489aff3ae74cc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pjt_sydney_pub_rt"
            },
            "tags_all": {
              "Name": "pjt_sydney_pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0183f88cf99f32719"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_pri_rt_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pri_sn3_id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097793309a53e2006",
            "route_table_id": "rtb-0778e126d0b3b3efb",
            "subnet_id": "subnet-0ac9223a41efb7ed1"
          },
          "dependencies": [
            "aws_route_table.tf_pri_rt",
            "aws_subnet.tf_sn",
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "pri_sn4_id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a65a59af89d5d8a6",
            "route_table_id": "rtb-0778e126d0b3b3efb",
            "subnet_id": "subnet-052f6b311bfe2062a"
          },
          "dependencies": [
            "aws_route_table.tf_pri_rt",
            "aws_subnet.tf_sn",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_pub_rt_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_sn1_id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033415bb8a9d3be7b",
            "route_table_id": "rtb-009b3573e48b87934",
            "subnet_id": "subnet-00d40836cd7e9f95b"
          },
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_route_table.tf_pub_rt",
            "aws_subnet.tf_sn",
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "pub_sn2_id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dc2e8da6e0ed3a4",
            "route_table_id": "rtb-009b3573e48b87934",
            "subnet_id": "subnet-01d37e6116096ab30"
          },
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_route_table.tf_pub_rt",
            "aws_subnet.tf_sn",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.1.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:263535801242:subnet/subnet-00d40836cd7e9f95b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d40836cd7e9f95b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263535801242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pjt_sydney_10.1.1.0/24_sn"
            },
            "tags_all": {
              "Name": "pjt_sydney_10.1.1.0/24_sn"
            },
            "vpc_id": "vpc-0183f88cf99f32719"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "10.1.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:263535801242:subnet/subnet-01d37e6116096ab30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d37e6116096ab30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263535801242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pjt_sydney_10.1.2.0/24_sn"
            },
            "tags_all": {
              "Name": "pjt_sydney_10.1.2.0/24_sn"
            },
            "vpc_id": "vpc-0183f88cf99f32719"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "10.1.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:263535801242:subnet/subnet-0ac9223a41efb7ed1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac9223a41efb7ed1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263535801242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pjt_sydney_10.1.3.0/24_sn"
            },
            "tags_all": {
              "Name": "pjt_sydney_10.1.3.0/24_sn"
            },
            "vpc_id": "vpc-0183f88cf99f32719"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "10.1.4.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:263535801242:subnet/subnet-052f6b311bfe2062a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052f6b311bfe2062a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263535801242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pjt_sydney_10.1.4.0/24_sn"
            },
            "tags_all": {
              "Name": "pjt_sydney_10.1.4.0/24_sn"
            },
            "vpc_id": "vpc-0183f88cf99f32719"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:263535801242:vpc/vpc-0183f88cf99f32719",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0e7b94e7d51cf31d0",
            "default_route_table_id": "rtb-0838327fd12f05e0f",
            "default_security_group_id": "sg-0244b2dc0da553509",
            "dhcp_options_id": "dopt-08a00ad27bd2230d4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0183f88cf99f32719",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0838327fd12f05e0f",
            "owner_id": "263535801242",
            "tags": {
              "Name": "pjt_sydney_vpc"
            },
            "tags_all": {
              "Name": "pjt_sydney_vpc"
            }
          }
        }
      ]
    }
  ]
}